@@ -59,8 +59,19 @@ xmlNodePtr StateManager::findState(const std::string& state)
   THROW("State not found");
 }
 
+#if 1
+#include "Application.h"
+#include <services/gui/widget/Button.h>
+#include <services/gui/widget/Panel.h>
+#include <services/gui/widget/Label.h>
+#include <services/gui/widget/TextBox.h>
+#include <services/gui/widget/Console.h>
+void quitButton(dime::Button* button);
+#endif
+
 bool StateManager::setState( const std::string& newState )
 {
+#if 0
   // Find the new state in statefile
   xmlNodePtr nstate = findState(newState);
 
@@ -73,4 +84,34 @@ bool StateManager::setState( const std::string& newState )
   // Load new state
 
   return true;
+#else
+  dime::Console myTestConsole(dime::Rectangle(10,300,620,120));
+
+  dime::Label myTestLabel("Dime test!", dime::Rectangle(10,10,200,30));
+  dime::TextBox myTestTextBox("TextBox!", dime::Rectangle(13,43,97,32));
+
+  dime::Button myTestButton(dime::Rectangle(535,450,100,25));
+            
+  myTestButton.setBackground(new dime::BitmapRenderer(myTestButton.getRectangle(),"quitbutton2.png", dime::BitmapRenderer::TILE));
+  myTestButton.setHighlightBackground(new dime::BitmapRenderer(myTestButton.getRectangle(),"quitbutton.png", dime::BitmapRenderer::TILE));
+  myTestButton.setPressedBackground(new dime::BitmapRenderer(myTestButton.getRectangle(),"quitbutton3.png", dime::BitmapRenderer::TILE));
+
+  dime::Panel myTestPanel(dime::Rectangle(550,0,90,90));
+  myTestPanel.setBackground(new dime::BitmapRenderer(myTestPanel.getRectangle(),"dimelogo_small2.png", dime::BitmapRenderer::CENTER));
+  myTestButton.onClicked.connect(SigC::slot(quitButton));
+            
+  dime::InputService * pIS = dime::InputService::getInstance();
+  pIS->addInputMapping( new dime::InputMapping(
+			    pIS->getInputDevice(dime::InputDevice::KEYBOARD),
+			    SDLK_ESCAPE, false,
+			    SigC::slot(*dime::Application::getInstance(),
+				       &dime::Application::escPressed)));
+            
+  dime::DimeServices::getInstance()->getGuiService()->getRootWidget().addWidget(&myTestPanel);
+  dime::DimeServices::getInstance()->getGuiService()->getRootWidget().addWidget(&myTestLabel);
+  dime::DimeServices::getInstance()->getGuiService()->getRootWidget().addWidget(&myTestTextBox);
+  dime::DimeServices::getInstance()->getGuiService()->getRootWidget().addWidget(&myTestConsole);
+  dime::DimeServices::getInstance()->getGuiService()->getRootWidget().addWidget(&myTestButton);
+  return true;
+#endif
 }
